# velcro-framework

./: .gitignore  CMakeLists.txt  README.md
velcro-core/: CMakeLists.txt
velcro-core/vcore/: base.h  configuration.h  core_files.cmake  platform.cc  platform.h  platform_default.h  platform_incl.h  platform_restricted_file_default.h  vcore_files.cmake
velcro-core/vcore/casting/: lossy_cast.h  numeric_cast.h  numeric_cast_internal.h
velcro-core/vcore/compression/: compression.h  zstd_compression.h
velcro-core/vcore/console/: console.cc  console.h  console_data_wrapper.h  console_data_wrapper.inl  console_functor.cc  console_functor.inl  console_type_helpers.h  console_type_helpers.inl  iconsole.h  ilogger.h
velcro-core/vcore/debug/: budget.cc  budget.h  budget_tracker.cc  budget_tracker.h  event_trace.cc  event_trace.h  event_trace_detector.cc  event_trace_detector.h  event_trace_detector_bus.h  ievent_logger.h  local_file_event_logger.cc  local_file_event_logger.h  profiler.cc  profiler.h  profiler.inl  stack_tracer.h  trace.cc  trace.h  trace_message_bus.h  trace_message_detector_bus.h
velcro-core/vcore/detector/: default_string_pool.h  detector.cc  detector.h  stream.cc  stream.h
velcro-core/vcore/event_bus/: environment.h  event.h  event.inl  event_bus.h  event_bus_environment.cc  event_bus_environment.cpp  ievent_scheduler.h  ordered_event.inl  policies.h  scheduled_event.cc  scheduled_event.h  scheduled_event_handle.h
velcro-core/vcore/event_bus/Internal/: bus_container.h  call_stack_entry.h  handlers.h
velcro-core/vcore/event_bus/internal/: handlers.h
velcro-core/vcore/interface/: interface.h
velcro-core/vcore/io/: byte_container_stream.h  compression_bus.cc  compression_bus.h  compressor.cc  compressor.h  compressor_stream.cc  compressor_stream.h  compressor_zlib.cc  compressor_zlib.h  compressor_zstd.cc  compressor_zstd.h  file_io.cc  file_io.h  file_reader.cc  file_reader.h  generic_streams.cc  generic_streams.h  io_utils.cc  io_utils.h  istreamer.h  istreamer_types.cc  istreamer_types.h  istreamer_types.inl  system_file.cc  system_file.h  text_stream_writers.h
velcro-core/vcore/io/path/: path.cc  path.h  path.inl  path_iterable.inl  path_parser.inl
velcro-core/vcore/io/streamer/: block_cache.cc  block_cache.h  dedicated_cache.cc  dedicated_cache.h  file_range.cc  file_range.h  file_request.cc  file_request.h  file_request.inl  read_splitter.cc  read_splitter.h  request_path.cc  request_path.h  scheduler.cc  scheduler.h  statistics.cc  statistics.h  storage_drive.cc  storage_drive.h  stream_stack_entry.cc  stream_stack_entry.h  streamer.cc  streamer.h  streamer_configuration.cc  streamer_configuration.h  streamer_context.cc  streamer_context.h
velcro-core/vcore/ipc/: shared_memory.cc  shared_memory.h  shared_memory_common.h
velcro-core/vcore/math/: crc.cc  crc.h  crc.inl  guid.h  math_intrinsics.h  math_reflection.cc  math_reflection.h  math_utils.h  random.h  sfmt.cc  sha1.h  type_id.h  uuid.cc  uuid.h
velcro-core/vcore/math/internal/: math_type.h  simd.h  simd_common_sse.inl  simd_neon.inl  simd_scalar.inl
velcro-core/vcore/memory/: allocator_base.cc  allocator_base.h  allocator_manager.cc  allocator_manager.h  allocator_override_shim.cc  allocator_records.cc  allocator_wrapper.h  dlmalloc.inl  heap_schema.cc  heap_schema.h  hpha_schema.cc  hpha_schema.h  iallocator.h  memory.h  memory_detector.cc  memory_detector.h  memory_detector_bus.h  nedmalloc.inl  new_and_delete.inl  osallocator.cc  osallocator.h  platform_memory_instrumentation.h  pool_allocator.h  pool_schema.cc  pool_schema.h  simple_schema_allocator.h  system_allocator.cc  system_allocator.h
velcro-core/vcore/module/: dynamic_module_handle.cc  dynamic_module_handle.h  environment.cc  environment.h  module.h
velcro-core/vcore/name/: name_dictionary.cc
velcro-core/vcore/name/internal/: name_data.cc
velcro-core/vcore/native_ui/: native_ui_requests.h  native_ui_system.cc  native_ui_system.h
velcro-core/vcore/outcome/: outcome.h
velcro-core/vcore/outcome/internal/: outcome_impl.inl  outcome_storage.h
velcro-core/vcore/platform_id/: platform_id.h
velcro-core/vcore/rtti/: type.h
velcro-core/vcore/serialization/: dynamic_serializable_field.cc  dynamic_serializable_field.h  serialization_context.cc  serialization_context.h  vstd_any_data_container.inl  vstd_containers.inl
velcro-core/vcore/settings/: command_line.cc  command_line.h  setting.cc  setting.h
velcro-core/vcore/socket/: vsocket.cc  vsocket.h  vsocket_fwd.h
velcro-core/vcore/statistics/: named_running_statistic.h  running_statistic.cc  statistical_profiler.h  statistical_profiler_proxy.h  statistics_manager.h
velcro-core/vcore/std/: algorithm.h  allocator.cc  allocator.h  allocator_ref.h  allocator_static.h  allocator_traits.h  any.h  base.h  config.h  createdestroy.h  functional.h  functional_basic.h  hash.cc  hash.h  hash_table.h  iterator.h  limits.h  numeric.h  optional.h  ratio.h  reference_wrapper.h  sort.h  time.h  tuple.h  typeinfo.h  utils.h  vstd_files.cmake
velcro-core/vcore/std/bind/: mem_fn.h
velcro-core/vcore/std/chrono/: chrono.h  clocks.h  types.h
velcro-core/vcore/std/containers/: array.h  compressed_pair.h  compressed_pair.inl  deque.h  fixed_list.h  fixed_unordered_set.h  fixed_vector.h  intrusive_set.h  intrusive_slist.h  list.h  (+10 more)
velcro-core/vcore/string_func/: string_func.cc  string_func.h
velcro-core/vcore/threading/: thread_safe_deque.h  thread_safe_deque.inl  thread_safe_object.h
velcro-core/vcore/time/: itime.h
velcro-core/vcore/unit_test/: test_types.h  unit_test.h
velcro-core/vcore/util_test/: unit_test.h
velcro-core/vcore/utilitys/: city.cc  type_hash.cc  type_hash.h  utility.cc  utility.h
velcro-core/vcore/vobject/: attribute_reader.h  reflect_context.cc  reflect_context.h  reflect_manager.cc  reflect_manager.h  rtti.h  type.h  type_safe_integral.h  type_simple.h  vobject.h
velcro-test/: CMakeLists.txt
velcro-test/vtest/: colorized_output.cc  platform.h  printers.cc  printers.h  printers.inl  utils.cc  utils.h  vtest.cc  vtest.h  vtest_files.cmake
(+716 files in other folders)
