CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

#SET(PROJ_NAME VelcroFramework)

#调试版本增加后缀
SET(CMAKE_DEBUG_POSTFIX "_debug")

SET(LOCAL_CORE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/velcro-core)
SET(LOCAL_TEST_SOURCE_DIR ${PROJECT_SOURCE_DIR}/velcro-test)
SET(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/3dparty)


#设置编译输出目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Binaries)
SET(LIBRARY_OUTPUT_PATH    ${PROJECT_SOURCE_DIR}/Binaries)

#设置编译输出目录为默认库搜索路径
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/Binaries)
#设置头文件搜索目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/velcro-core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/velcro-test)


    
add_subdirectory(velcro-core)
add_subdirectory(version)

